feat: Add endpoint to retrieve user details by email
